# diann-runner

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.diann  Makefile  OKTOBERFEST.md  OKTOBERFEST_INTEGRATION.md  README.md  README_DEPLOYMENT.md  Snakefile.DIANN3step  Snakefile.DIANN3step.smk  Snakefile.old.smk  USAGE_EXAMPLES.md  deploy.py  deploy.smk  deploy_config.yaml  pyproject.toml  run_plasma_workflow.fish  run_snakefile_workflow.fish  run_snakefile_workflow_dia.fish  run_snakemake_workflow.fish  run_workflow.sh  snakemake_helpers.py
TODO/: TODO_Shall_we_keep_step_3.md  TODO_add_aptainer_compatibility.md  TODO_apprunner_keys.md  TODO_diann_on_gstore.md  TODO_drop_prolfqua_tsv_conversion.md  TODO_export_quant.md  TODO_ezypy_integration.md  TODO_integration_test.md  TODO_mass_accuracy.md  TODO_pg_level.md  TODO_pmultiqc_integration.md  TODO_sushi_diann_apptainer_integration.md  TODO_unrelated_runs.md  TODO_unrelated_runs_v2.md
TODO/ARCHIVE/: DONE_TODO_SingleStepWorkflow.md  DONE_TODO_adding_diann_2.5.md  DONE_TODO_integration_test.md  DONE_TODO_library_handling.md
WU12345_work/: params.yml
bfabric_executable/: Makefile  executable_A366_DIANN.xml  executable_A386_DIANN_3.2.xml  executable_A386_DIANN_3.2.yaml  make_upload.py  make_upload_xml.py
contrib/oktoberfest/: README.md  old_okt.smk
data/dda_mzml/: params.yml  setup_test_run.fish
data/dia_mzml/: params.yml  setup_test_run.fish
docker/: Dockerfile.diann  Dockerfile.diann-2.3.1  Dockerfile.diann_thermofilereader  Dockerfile.thermorawfileparser  Dockerfile.thermorawfileparser-arm  Dockerfile.thermorawfileparser-linux
docs/: BFABRIC_DEPLOY.md  DIANN_PARAMETERS.md  KOINA_ADAPTER.md  KOINA_INTEGRATION.md  QUICK_REFERENCE.md  README.md  SNAKEFILE_TEST.md  TESTING_LOG.md  USAGE_EXAMPLES.md  default_config.json  diann_runner_presentation.md  tmux_cheatsheet.md
example_params_yaml/: executable_A386_DIANN_3.2.xml  executable_new.xml  params.yml  params_match_exectuable.yml  params_new.yml  test_params.yml  workflow_koina.config.json
src/diann_runner/: Snakefile.DIANN3step.smk  __init__.py  cleanup.py  cli.py  container_utils.py  diann_docker.py  docker.py  docker_utils.py  koina_adapter.py  oktoberfest_docker.py  param_core.py  plotter.py  prepare.py  prolfquapp_docker.py  prozor_diann.py  qc_report.py  report_figures.py  request.py  run_diann_cli.py  snakemake_cli.py  snakemake_helpers.py  sushi_adapter.py  sushi_params.py  thermoraw_docker.py  workflow.py
src/prozor/: __init__.py  ahocorasick.py  annotate.py  greedy.py  sparse_matrix.py
tests/: __init__.py  test_cli.py  test_container_utils.py  test_create_workflow_mapping.py  test_executable_contract.py  test_param_core.py  test_plotter.py  test_pmultiqc.py  test_prepare.py  test_prolfquapp_docker.py  test_prozor.py  test_qc_report.py  test_raw_mount.py  test_request.py  test_run_diann_cli.py  test_snakefile_dryrun.py  test_snakemake_helpers.py  test_version_consistency.py  test_workflow.py
(+34 files in other folders)
