[project]
name = "diann-runner"
version = "0.1.0"
description = "Tools for running DIA-NN workflows"
requires-python = ">=3.10"
# Install with: uv pip install -e .
dependencies = [
    "snakemake>=8.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "cyclopts>=2.0.0",
    "pyarrow>=10.0.0",
]

[project.scripts]
diann-docker = "diann_runner.docker:main"
diann-workflow = "diann_runner.cli:app"
diann-cleanup = "diann_runner.cleanup:main"
diann-qc = "diann_runner.plotter:main"
diann-koina-adapter = "diann_runner.koina_adapter:app"
oktoberfest-docker = "diann_runner.oktoberfest_docker:main"
prolfquapp-docker = "diann_runner.prolfquapp_docker:main"

[project.optional-dependencies]
# Install with: uv pip install -e ".[test]"
test = ["pytest>=7.0.0"]

