[project]
name = "diann-runner"
version = "0.2.1"
description = "Tools for running DIA-NN workflows"
requires-python = ">=3.11"
# Install with: uv pip install -e .,
dependencies = [
    "snakemake>=8.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "cyclopts>=2.0.0",
    "pyarrow>=10.0.0",
    "scipy>=1.7.0",
]

[project.scripts]
diann-docker = "diann_runner.diann_docker:main"
diann-workflow = "diann_runner.cli:app"
diann-cleanup = "diann_runner.cleanup:main"
diann-qc = "diann_runner.plotter:main"
diann-koina-adapter = "diann_runner.koina_adapter:app"
oktoberfest-docker = "diann_runner.oktoberfest_docker:main"
prolfquapp-docker = "diann_runner.prolfquapp_docker:main"
diann-snakemake = "diann_runner.snakemake_cli:main"

[project.optional-dependencies]
# Install with: uv pip install -e ".[test]"
test = ["pytest>=7.0.0"]

[tool.setuptools.package-data]
diann_runner = ["Snakefile.DIANN3step.smk"]

